// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Popover Default smoke-test 1`] = `
<button class="cmpui_button"
        data-variant="primary"
        data-size="M"
>
  Select
</button>
`;

exports[`components/Popover Scroll smoke-test 1`] = `
<div style="height: 400px; overflow: auto;">
</div>
<button class="cmpui_button"
        data-variant="primary"
        data-size="M"
>
  Select
</button>
<div style="height: 400px; overflow: auto;">
</div>
`;
